--- a/thesis.tex
+++ b/thesis.tex
@@ -43,8 +43,12 @@ breaklines=true,breakatwhitespace=true}
 \newcommand{\rl}[1]{}   % turn off
 \end{comment}
 
+
+\newcommand*\mean[1]{\bar{#1}}
 \newcommand{\versionOne}{LSH-Inspired Semantic Extraction and Retrieval Engine (Version 1) }
 \newcommand{\versionTwo}{Chamfer Distance based Semantic Extraction and Retrieval Engine (Version 2) }
+
+
 
 
 % -------------------------------------------------------------------
